--- a/WMS/Views/Order/_SalesOrders.cshtml
+++ b/WMS/Views/Order/_SalesOrders.cshtml
@@ -139,17 +139,16 @@
             c.Settings.AutoFilterCondition = AutoFilterCondition.Equals;
         });
 
-        if (type != 4)
-        {
-            settings.Columns.Add(c =>
-            {
-                c.FieldName = "PickerName";
-                c.Caption = "Picker Name";
-                c.Width = Unit.Percentage(10);
-                c.Settings.AutoFilterCondition = AutoFilterCondition.Contains;
-                c.Settings.AllowSort = DefaultBoolean.True;
-            });
-        }
+
+        settings.Columns.Add(c =>
+{
+    c.FieldName = "ExpectedDate";
+    c.Caption = "Required Date";
+    c.Width = Unit.Percentage(10);
+    c.ColumnType = MVCxGridViewColumnType.DateEdit;
+    c.Settings.AutoFilterCondition = AutoFilterCondition.Equals;
+});
+
 
         if (ViewBag.ShowDeliveryService)
         {
@@ -193,26 +192,7 @@
             });
         }
 
-        settings.Columns.Add(c =>
-        {
-            c.FieldName = "OrderNotesListText";
-            c.Caption = "Notes";
-            c.Width = Unit.Percentage(10);
-            c.PropertiesEdit.EncodeHtml = false;
-            c.Settings.AllowAutoFilter = DefaultBoolean.False;
-            c.Settings.AllowSort = DefaultBoolean.False;
-            c.SetDataItemTemplateContent(m =>
-            {
-                var notes = DataBinder.Eval(m.DataItem, "OrderNotesListText").ToString();
 
-                if (!string.IsNullOrWhiteSpace(notes))
-                {
-                    notes = notes.Replace("'", "");
-                    ViewContext.Writer.Write("<i class='fa  fa-file-text-o' onclick=\"Gane.Helpers.ShowPopupMessage('Notes','"+ notes + "')\"></i>");
-                }
-
-            });
-        });
 
         if (type != 3 && type != 4)
         {
@@ -294,7 +274,7 @@
 
                     Html.DevExpress().ProgressBar(pb =>
                     {
-                        pb.Name = "pb"+ Guid.NewGuid().ToString("N") + (int)DataBinder.Eval(m.DataItem, "OrderID");
+                        pb.Name = "pb" + Guid.NewGuid().ToString("N") + (int)DataBinder.Eval(m.DataItem, "OrderID");
                         pb.ToolTip = Qty + "/" + (processQty - returnQty) + " processed";
                         pb.Properties.IndicatorStyle.BackColor = System.Drawing.Color.DarkRed;
                         pb.EnableTheming = false;
